# shiftwm

./: CMakeLists.txt
src/: client.c  client.h  config.h  keys.h  layout.c  layout.h  main.c  monitor.c  monitor.h
